src/objects/CLM_L2D_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>CLM_A_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>A Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLM_A_Plus_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>A+ Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLM_C_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Customer Commitment</fullName>
                </value>
                <value>
                    <fullName>Customer Data Security</fullName>
                </value>
                <value>
                    <fullName>Customer Remote Access</fullName>
                </value>
                <value>
                    <fullName>Customer Restrictions</fullName>
                </value>
                <value>
                    <fullName>Customer Security Management</fullName>
                </value>
                <value>
                    <fullName>Data Privacy</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>Escrow</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management</fullName>
                </value>
                <value>
                    <fullName>Incident Response and Handling</fullName>
                </value>
                <value>
                    <fullName>Information Security Control</fullName>
                </value>
                <value>
                    <fullName>Interception</fullName>
                </value>
                <value>
                    <fullName>IPR</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Manage Services</fullName>
                </value>
                <value>
                    <fullName>Network Security</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Penalties</fullName>
                </value>
                <value>
                    <fullName>Physical Security</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Security</fullName>
                </value>
                <value>
                    <fullName>Risk and Title</fullName>
                </value>
                <value>
                    <fullName>Sales Mode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_D_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>D Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLM_E_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E Help</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLM_L2DTrigger__c</fullName>
        <inlineHelpText>Select Yes if this Trigger requires L2D Approval. Select No if this Trigger has not yet been formally introduced as requiring L2D Approval, but does represent a business risk.</inlineHelpText>
        <label>L2D Trigger?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_L2D_Trigger_Ext_ID__c</fullName>
        <description>External Id - Used for Data Migration</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>L2D Trigger Ext ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_LoA_Level__c</fullName>
        <label>LoA Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Nokia_Default_Position__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Default Position</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Parent_L2D_Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent L2D Trigger</label>
        <referenceTo>CLM_L2D_Trigger__c</referenceTo>
        <relationshipLabel>L2D Triggers</relationshipLabel>
        <relationshipName>L2D_Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Position_to_Avoid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Position to Avoid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Subcategory__c</fullName>
        <description>The clause subcategory</description>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CLM_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Screening</fullName>
                </value>
                <value>
                    <fullName>Access Control System</fullName>
                </value>
                <value>
                    <fullName>Addressable market</fullName>
                </value>
                <value>
                    <fullName>Asset Identification and Classification</fullName>
                </value>
                <value>
                    <fullName>Assurance</fullName>
                </value>
                <value>
                    <fullName>Audit and Logging</fullName>
                </value>
                <value>
                    <fullName>Audit and Reporting</fullName>
                </value>
                <value>
                    <fullName>Baseline Requirements</fullName>
                </value>
                <value>
                    <fullName>Cloud usage</fullName>
                </value>
                <value>
                    <fullName>Compatibility</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consequential &amp; Indirect Damages</fullName>
                </value>
                <value>
                    <fullName>Containment, Evidence, and Recovery</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Credential Management​</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Customer Documentation</fullName>
                </value>
                <value>
                    <fullName>Customer Scans and Penetration Tests</fullName>
                </value>
                <value>
                    <fullName>Datacenters and Computing Facilities</fullName>
                </value>
                <value>
                    <fullName>Data Localization and Onward Transfers</fullName>
                </value>
                <value>
                    <fullName>Data Loss Prevention</fullName>
                </value>
                <value>
                    <fullName>Data Mapping and Inventory</fullName>
                </value>
                <value>
                    <fullName>Data Privacy</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Data Security</fullName>
                </value>
                <value>
                    <fullName>Data Subject Rights</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Direct Damages</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery and Business Continuity</fullName>
                </value>
                <value>
                    <fullName>Domain/Industry/Region Specific Regulations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Trigger_Domain__c</fullName>
        <label>Trigger Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Trigger_Long_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Trigger_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Trigger_Sub_Domain__c</fullName>
        <label>Trigger Sub-Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIFI</fullName>
                </value>
                <value>
                    <fullName>Supply Care</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>L2D Trigger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLM_Trigger_Domain__c</columns>
        <columns>CLM_Trigger_Sub_Domain__c</columns>
        <columns>CLM_Trigger_Name__c</columns>
        <columns>CLM_Category__c</columns>
        <columns>CLM_Subcategory__c</columns>
        <columns>CLM_Status__c</columns>
        <columns>CLM_L2DTrigger__c</columns>
        <columns>CLM_Nokia_Default_Position__c</columns>
        <columns>CLM_Position_to_Avoid__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Triggers</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>L2D Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L2D Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>